# cdc-badge-demo

./: Cargo.toml  README.md  laze-project.yml
src/: app.rs  ble.rs  buttons.rs  drawer.rs  main.rs  pins.rs
src/apps/: mod.rs  receiver.rs  scanner.rs
