[package]
name = "cdc-badge-demo"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = [
  "i2c",
  "spi",
  "external-interrupts",
  "time",
] }
ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards" }


embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-graphics-core = { version = "0.4.0" }
embedded-graphics = { version = "0.8.1" }
embassy-sync = "0.7.2"
heapless = { version = "0.9.2", features = ["defmt"] }
once_cell = { version = "1.21.3", default-features = false, features = [
  "critical-section",
] }
tinybmp = "0.7.0"

ssd1680-rs = { git = "https://github.com/nponsard/ssd1680-rs.git", features = [
  "async",
] }
async-tca9535 = { version = "0.1.0", git = "https://github.com/nponsard/async-tca9535", rev = "ecc373c3890c01593f0a0c78c1a76d69489019cd" }
mousefood = { version = "0.4.0", default-features = false, features = [
  "fonts",
] }
embassy-futures = "0.1.2"
ratatui = { version = "0.30.0", default-features = false, features = [
  "all-widgets",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }
